# portfolio_tracker_backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-268de306eff21776dd506ec6fd2954d8f4f0603e8b8dfb08c4aa1545f19920d1.json  query-2b526e37c8c7f208a40fbabc4c71e3dc7bf90b542fc35d61db7d9d2c16d2b986.json  query-3032ebeee0435a366afb51fc9e6bbca665aa43b09899999b9a70006ac2a3dcf4.json  query-3403c4ce670edb5d32af4997596f1b36ee2903606c988b262eec8d3f608ebc42.json  query-372ec540ccde412f917c4af33640f0a00f8e9414bd4e1a363a981ec2fa4860b4.json  query-4d9e38b477b70a1931578ce84891752e7231a3c7853675d40807c02da3a0568f.json  query-530cf1cb0c4449c3f0730cf33672bd600fd12954ffcf9fc724d72f5fca98a750.json  query-562e5c560334b01f5b1628a3afffe3642c408a9e9e4fe7f714f56dea3f09f289.json  query-584c286518a99d97e420423a86a4164d0c2c2e1eef81921c548c917082a81e45.json  query-5a4e2f5bd7977958c865e1ac0a1a87dac1a94c1f8bd44fbc6cc4d6963592a702.json  query-5ed0a2c7a8bcb06bfb59b4a366c575c5093de6e8f41e8ad6152d539393f8f6d8.json  query-66cdbf9ac096aeb7e81f1b2ac8c24ed72801787ab07718d90b3ea8847d19c6e2.json  query-726a96a55b129db298b099b29281aefcba4eb84c0b5e0f981f8daaffa988bb0a.json  query-74040eda385fe919f94461e0e3d0235ed5023d0602e0e10a8d00b6bef52a10b5.json  query-74436cf61089c768dbe49bbeead36b37e65e4c6759418616c56dbc48195be5aa.json  query-7af85df68051cf2bf1840c17c6e82bc3c9073cda315814d5b51b09bf78dd0714.json  query-8083f1e951682fd43eb0521df83dea822548a6c6234a847294a06897bcde2f39.json  query-931cbd775f8d8e45399b6cfbd3e9bbf8cd4e8d82d105c664f0bd755762fbdef3.json  query-a26d073b9b510be2477568857eef1e38cf291c4dffc87f1ee4a7dbf573152cf8.json  query-b50b97b34521df830e1e70d7375b4ca23a40274334cce27406b35800ce6530f4.json  query-b86a1d8c810b4eea3fe53b925c3e221a9c61259dbccfa82a07661fd0d40b2659.json  query-bbe9779b7a8073b3eec2eb845855d6dc84e7442c49c4171ffa97243e6804c301.json  query-d97262be07dcfc63dc8cd9704f5081ac0a9c96bbb5d6fae6352765dfb1aad292.json  query-deccb029c83ce9c2cdaff58b2bc3e4b73bf0ab95200fa16689d74326c1123229.json  query-e12e61385ea4e70f4de4cebfeeb6382f839d4ceea7ecff28ca8746c6372d1aac.json  query-e6449d9532b88448e7c4800c5c411fcd8cb103d777e4066db9bfebd3ea84d2c0.json
http/: assets.http  auth.http  portfolio.http
migrations/: 001_init.sql
nginx/: nginx.conf
src/: appconfig.rs  appstate.rs  lib.rs  main.rs
src/api/: appstate.rs  auth.rs  (+4 more)
tests/: client.rs  mod.rs  repository.rs
(+82 files in other folders)
