[package]
name = "portfolio_tracker_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-float"] }
thiserror = "2.0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "rust_decimal"] }
dotenvy = "0.15"
itertools = "0.14"
futures = "0.3.32"
strum = { version = "0.26", features = ["derive"] }
