[package]
name = "portfolio_tracker_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-float"] }
thiserror = "2.0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "rust_decimal", "uuid", "chrono"] }
dotenvy = "0.15"
itertools = "0.14"
futures = "0.3.32"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = "1.0.149"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
